--- a/poll_app/app/templates/create_poll.html
+++ b/poll_app/app/templates/create_poll.html
@@ -38,7 +38,7 @@
             </div>
 
     <div class="button-div">
-        <button type="submit" onclick="return confirm('Do you want to submit?')" class="button btn btn-info">Create Poll</button>
+        <button type="submit" onclick="return confirm('Are you sure you want to Submit?')" class="button btn btn-info">Create Poll</button>
     </div>
   </form>
 </div>
