--- a/poll_app/app/templates/home.html
+++ b/poll_app/app/templates/home.html
@@ -25,7 +25,9 @@
         {% endif %}
         <a href="{{url_for('logout')}}">Log Out</a>
         <hr>
+        {% if not user.is_admin %}
         <a class="text-danger" onclick="return confirm('Are you sure you want to Delete this Account?')" href="{{url_for('delete_account')}}"> Delete Account </a>
+        {% endif %}
     </div>
     <script>
 
